<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/fav"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_usage"
            android:icon="@drawable/usage"
            android:title="@string/usage" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/contacyus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/valuable"
            android:icon="@drawable/valuab"
            android:title="@string/valuates_app_on_store" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>



</menu>
