<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.bloadbank.Views.Activity.ui.information.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info"/>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.bloadbank.Views.Activity.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.bloadbank.Views.Activity.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bloadbank.Views.Activity.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_usage"
        android:name="com.example.bloadbank.Views.Activity.ui.usage.UsageFragment"
        android:label="@string/usage"
        tools:layout="@layout/fragment_usage" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.bloadbank.Views.Activity.ui.contactUs.ContactUs"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.bloadbank.Views.Activity.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.example.bloadbank.Views.Activity.ui.LogoutFragment"
        android:label="@string/log_out"
        tools:layout="@layout/fragment_logout"/>


</navigation>