<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backimage"

    tools:context=".Views.Fragment.NewPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="@dimen/dp_50"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/dim_150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

    <ImageView
        android:id="@+id/forget_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo"
        android:layout_margin="@dimen/dp_20"
        />
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:id="@+id/tv_changepascode"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_image"
        android:text="@string/a_code_change_password"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp_20"/>
    <EditText
        android:inputType="number"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
         
        android:id="@+id/confirmation_code_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/tv_changepascode"
        android:hint="@string/confirmation_code"
        android:background="@drawable/edittext_background"
        android:layout_margin="@dimen/dp_5"
        />
    <EditText
        android:inputType="numberPassword"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
         
        android:id="@+id/new_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/confirmation_code_password"
        android:hint="@string/new_password"
        android:background="@drawable/edittext_background"
        android:layout_margin="@dimen/dp_5"
        />
    <EditText
        android:inputType="numberPassword"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
         
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/new_password_edittext"
        android:hint="@string/confirm_new_password"
        android:background="@drawable/edittext_background"
        android:layout_margin="@dimen/dp_5"
        />
    </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_green"
        android:text="@string/change_password"
        android:layout_margin="@dimen/dp_10"
        android:id="@+id/change_password_button"
        />

</RelativeLayout>