<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Views.Fragment.NewDonationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="New Donation"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dim_25sp"/>

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/newdonation_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/edittext_background"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:inputType="number"
                android:id="@+id/newdonation_age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/edittext_background"
                android:hint="@string/age"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_15" />

            <Spinner

                android:id="@+id/newdonation_bloadtype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"


                android:textSize="@dimen/sp_15" />

            <EditText
                android:inputType="number"
                android:id="@+id/newdonation_numberbload"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/edittext_background"
                android:hint="@string/number_of_pockets"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:inputType="text"
                android:id="@+id/newdonation_hospitalname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/edittext_background"
                android:hint="@string/hospital_name"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_15" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="start"
                android:background="@drawable/edittext_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/newdonation_hospitaaladdress"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_50"
                    android:layout_margin="@dimen/dp_5"
                    android:layout_weight="2"
                    android:hint="@string/hospital_address"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/sp_15" />

                <ImageView
                    android:id="@+id/newrequest_addmap"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/marker" />
            </LinearLayout>

            <Spinner
                android:id="@+id/newdonation_governemente"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"

                android:textSize="@dimen/sp_15" />

            <Spinner
                android:id="@+id/newdonation_city"

                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"

                />

            <EditText
                android:inputType="phone"
                android:id="@+id/newdonation_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/edittext_background"
                android:hint="@string/mob_phone"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:inputType="text"
                android:id="@+id/newdonation_notes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/edittext_background"
                android:hint="@string/notes"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/newdonation_btnsend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"

                android:background="@color/darkblue"
                android:text="@string/send"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>