<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@drawable/bloadtype_background"
        android:id="@+id/notifications_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/notification_settings"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifications_setting"
        android:layout_marginTop="@dimen/dp_20"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:background="@drawable/bloadtype_background"
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blood"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"

                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/notifications_bloads"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150dp"

                ></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:background="@drawable/bloadtype_background"
                android:id="@+id/notificationsgovs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/governement"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"

                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_40" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/notifications_fragment_rv_goverments_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                 ></androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/notifications_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/darkblue"
        android:text="@string/save" />


</RelativeLayout>